// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <i>name</i>
    </div>
    <div data-editable-target=\\"email\\">
        <i>email</i>
    </div>
</div>"
`;

exports[`application 2`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <form><input type=\\"text\\" name=\\"name\\" value=\\"\\"><input type=\\"submit\\" value=\\"Save\\"></form>
    </div>
    <div data-editable-target=\\"email\\">
        <i>email</i>
    </div>
</div>"
`;

exports[`application 3`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <div>Hexlet</div>
    </div>
    <div data-editable-target=\\"email\\">
        <i>email</i>
    </div>
</div>"
`;

exports[`application 4`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <div>Hexlet</div>
    </div>
    <div data-editable-target=\\"email\\">
        <form><input type=\\"text\\" name=\\"email\\" value=\\"\\"><input type=\\"submit\\" value=\\"Save\\"></form>
    </div>
</div>"
`;

exports[`application 5`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <div>Hexlet</div>
    </div>
    <div data-editable-target=\\"email\\">
        <div>support@hexlet.io</div>
    </div>
</div>"
`;

exports[`application 6`] = `
"<div class=\\"container m-3\\">
    <div data-editable-target=\\"name\\">
        <div><i>name</i></div>
    </div>
    <div data-editable-target=\\"email\\">
        <div>support@hexlet.io</div>
    </div>
</div>"
`;
